Navbar/game&random pages

--- a/superMangular/src/app/component/header/header.component.html
+++ b/superMangular/src/app/component/header/header.component.html
@@ -1,3 +1,5 @@
 <div class="header">
   <a routerLink="/"><img [src]="myLogo" width="150px"/></a>
+  <a routerLink="/">Game contest</a>
+  <a routerLink="/random_hero">Random Hero</a>
 </div>
