--- a/superMangular/src/app/app.component.html
+++ b/superMangular/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
 <router-outlet></router-outlet>
-<app-superhero></app-superhero>
+<app-superherolist></app-superherolist>
 <app-footer></app-footer>
