--- a/superMangular/src/app/component/superhero/superhero.component.html
+++ b/superMangular/src/app/component/superhero/superhero.component.html
@@ -1,1 +1,4 @@
 <p>nom : {{myHero.name}}</p>
+<p>aliases : {{myHero.biography.aliases}}</p>
+<p>real name : {{myHero.biography['full-name']}}</p>
+<img src={{myHero.image.url}} />
