--- a/superMangular/src/app/component/superherolist/superherolist.component.html
+++ b/superMangular/src/app/component/superherolist/superherolist.component.html
@@ -1,5 +1,5 @@
-<p>superherolist works!</p>
-<div>
-<app-superhero [myHero]="myHero1"></app-superhero>
-<app-superhero [myHero]="myHero2"></app-superhero>
+<div [ngClass]="['sidebyside']">
+<app-superhero [ngClass]="['herobg']" [myHero]="myHero1"></app-superhero>
+
+<app-superhero [ngClass]="['herobg']" [myHero]="myHero2"></app-superhero>
 </div>
