--- a/superMangular/src/app/component/superherolist/superherolist.component.css
+++ b/superMangular/src/app/component/superherolist/superherolist.component.css
@@ -1,10 +1,10 @@
-.sidebyside{
-  display:flex;
-  flex-direction: row;
-
-
+.sidebyside {
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 2%;
+    justify-content: space-around;
 }
 
-.herobg{
-  margin-left: 10%;
+.herobg {
+    margin-left: 0%;
 }
