--- a/superMangular/src/app/component/superhero/superhero.component.html
+++ b/superMangular/src/app/component/superhero/superhero.component.html
@@ -1,4 +1,6 @@
 <p>nom : {{myHero.name}}</p>
-<p>aliases : {{myHero.biography.aliases}}</p>
 <p>real name : {{myHero.biography['full-name']}}</p>
+<p>height : {{myHero.appearance.height[1]}}</p>
+<p>weight : {{myHero.appearance.weight[1]}}</p>
+<p>strength : {{myHero.powerstats.strength}}</p>
 <img src={{myHero.image.url}} />
