--- a/superMangular/src/app/component/random-page/random-page.component.html
+++ b/superMangular/src/app/component/random-page/random-page.component.html
@@ -1,2 +1,2 @@
 <app-superhero [ngClass]="['herobg']" [myHero]="myHeroRand"></app-superhero>
-<button (click)='reload()' class="btn btn-secondary">Random</button>
+<button (click)='reload()' class="btn btn-secondary">Change hero</button>
