--- a/superMangular/src/app/component/superherolist/superherolist.component.html
+++ b/superMangular/src/app/component/superherolist/superherolist.component.html
@@ -1,4 +1,5 @@
 <p>Qui c'est qui le plus fort là ???</p>
+<mat-spinner diameter="50" mode="indeterminate" [hidden]="hideMe"></mat-spinner>
 <div [ngClass]="['sidebyside']">
 <app-superhero [ngClass]="['herobg']" [myHero]="myHero1"></app-superhero>
 <button mat-flat-button color="accent" >{{myHero1.name}}</button>
