score sur la page mais c'est en retard d'un coup

--- a/superMangular/src/app/component/superherolist/superherolist.component.html
+++ b/superMangular/src/app/component/superherolist/superherolist.component.html
@@ -1,8 +1,10 @@
+<p>le score est de : {{score}}</p>
 <p>Qui c'est qui le plus fort là ???</p>
-<div [ngClass]="['sidebyside']">
-<app-superhero [ngClass]="['herobg']" [myHero]="myHero1"></app-superhero>
-<button mat-flat-button color="accent" >{{myHero1.name}}</button>
 
-<app-superhero [ngClass]="['herobg']" [myHero]="myHero2"></app-superhero>
-<button mat-flat-button color="accent" >{{myHero2.name}}</button>
+<div [ngClass]="['sidebyside']">
+    <app-superhero [ngClass]="['herobg']" [myHero]="myHero1"></app-superhero>
+    <button mat-flat-button color="accent" (click)="actionLeft()">{{myHero1.name}}</button>
+
+    <app-superhero [ngClass]="['herobg']" [myHero]="myHero2"></app-superhero>
+    <button mat-flat-button color="accent" (click)="actionRight()">{{myHero2.name}}</button>
 </div>
