--- a/superMangular/src/app/component/header/header.component.html
+++ b/superMangular/src/app/component/header/header.component.html
@@ -2,4 +2,5 @@
   <a routerLink="/"><img [src]="myLogo" width="150px"/></a>
   <a routerLink="/">Game contest</a>
   <a routerLink="/random_hero">Random Hero</a>
+  <a routerLink="/search_hero">Search Hero</a>
 </div>
