--- a/superMangular/src/app/component/superherolist/superherolist.component.html
+++ b/superMangular/src/app/component/superherolist/superherolist.component.html
@@ -1,7 +1,8 @@
 <p>le score est de : {{score}}</p>
 <p>Qui c'est qui le plus fort là ???</p>
 
-<div [ngClass]="['sidebyside']">
+<mat-spinner  diameter="500" mode="indeterminate" [hidden]="hideMe"></mat-spinner>
+<div [ngClass]="['sidebyside']" [hidden]="!hideMe">
     <app-superhero [ngClass]="['herobg']" [myHero]="myHero1"></app-superhero>
     <button mat-flat-button color="accent" (click)="actionLeft()">{{myHero1.name}}</button>
 
