j'ai voulu reparer le spinner
j'ai pas reussi et par depit j'ai mis un gif en attendant de trouver une solution

d'apres internet il y a une histoire comme quoi angular charge pas les modules a un moment mais plus tard et du coup quand on en a besoin le spinner est pas chargé

j'ai aussi mis tous les appels au service dan une fonction plutot que d'avoir des doublons

--- a/superMangular/src/app/component/superherolist/superherolist.component.html
+++ b/superMangular/src/app/component/superherolist/superherolist.component.html
@@ -1,7 +1,10 @@
 <p>le score est de : {{score}}</p>
-<p>Qui c'est qui le plus fort là ???</p>
 
-<mat-spinner  diameter="500" mode="indeterminate" [hidden]="hideMe"></mat-spinner>
+<mat-spinner diameter="500" mode="indeterminate" [hidden]="hideMe"></mat-spinner>
+<img [src]="mySpinner" width="150px" [hidden]="hideMe" />
+
+<p [hidden]="!hideMe">Qui c'est qui le plus fort là ???</p>
+
 <div [ngClass]="['sidebyside']" [hidden]="!hideMe">
     <app-superhero [ngClass]="['herobg']" [myHero]="myHero1"></app-superhero>
     <button mat-flat-button color="accent" (click)="actionLeft()">{{myHero1.name}}</button>
