--- a/superMangular/src/app/component/footer/footer.component.html
+++ b/superMangular/src/app/component/footer/footer.component.html
@@ -1,6 +1,6 @@
 <footer class="bg-light text-center text-lg-start">
-  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-    © 2021 Copyright :
-    <b>Brice Hechon, Julien Guinhut & Lucas Giraud</b>
-  </div>
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+        © 2021 Copyright :
+        <b>Laurena Touret, Brice Hechon, Julien Guinhut & Lucas Giraud</b>
+    </div>
 </footer>
