on peut jouer sur toutes les caractéristiques
ca choisie une caractéristique différente a chaque tours et ca met a jour la question
il faudra enlever la ligne qui donne toute les réponses pour le vrai jeu

--- a/superMangular/src/app/component/superhero/superhero.component.html
+++ b/superMangular/src/app/component/superhero/superhero.component.html
@@ -2,5 +2,6 @@
 <p>real name : {{myHero.biography['full-name']}}</p>
 <p>height : {{myHero.appearance.height[1]}}</p>
 <p>weight : {{myHero.appearance.weight[1]}}</p>
-<p>strength : {{myHero.powerstats.strength}}</p>
+<!-- commenter cette ligne pour prod -->
+<p>powerstat : {{ myjson.stringify(myHero.powerstats,null,4)}}</p>
 <img src={{myHero.image.url}} />
