spinner sur page random

--- a/superMangular/src/app/component/random-page/random-page.component.html
+++ b/superMangular/src/app/component/random-page/random-page.component.html
@@ -1,3 +1,5 @@
-<app-superhero [ngClass]="['herobg']" [myHero]="myHeroRand"></app-superhero>
-<button (click)='reload()' class="btn btn-secondary">Change hero</button>
-<p>qui c'est qui est le plus {{text_var}}</p>
+<img [src]="mySpinner" width="150px" [hidden]="hideMe" />
+<div [hidden]="!hideMe">
+    <app-superhero [ngClass]="['herobg']" [myHero]="myHeroRand"></app-superhero>
+    <button (click)='reload()' class="btn btn-secondary">Change hero</button>
+</div>
