--- a/superMangular/src/app/component/superhero/superhero.component.html
+++ b/superMangular/src/app/component/superhero/superhero.component.html
@@ -2,6 +2,5 @@
 <p>real name : {{myHero.biography['full-name']}}</p>
 <p>height : {{myHero.appearance.height[1]}}</p>
 <p>weight : {{myHero.appearance.weight[1]}}</p>
-<!-- commenter cette ligne pour prod -->
-<p>powerstat : {{ myjson.stringify(myHero.powerstats,null,4)}}</p>
+<p *ngIf="env.production">powerstat : {{ myjson.stringify(myHero.powerstats,null,4)}}</p>
 <img src={{myHero.image.url}} (error)="myHero.image.url='./assets/default.jpg'" />
