--- a/superMangular/src/app/component/superhero/superhero.component.html
+++ b/superMangular/src/app/component/superhero/superhero.component.html
@@ -1,6 +1,25 @@
+<!--
 <p>nom : {{myHero.name}}</p>
 <p>real name : {{myHero.biography['full-name']}}</p>
 <p>height : {{myHero.appearance.height[1]}}</p>
 <p>weight : {{myHero.appearance.weight[1]}}</p>
 <p *ngIf="env.production">powerstat : {{ myjson.stringify(myHero.powerstats,null,4)}}</p>
 <img src={{myHero.image.url}} (error)="myHero.image.url='./assets/default.jpg'" />
+-->
+
+<mat-card class="example-card">
+    <mat-card-header>
+        <mat-card-title>{{myHero.name}}</mat-card-title>
+    </mat-card-header>
+    <img mat-card-image style="width: 300px; padding: 10px;" src={{myHero.image.url}} (error)="myHero.image.url='./assets/default.jpg'" alt="Angular Logo">
+    <mat-card-content>
+        <p>real name : {{myHero.biography['full-name']}}</p>
+        <p>height : {{myHero.appearance.height[1]}}</p>
+        <p>weight : {{myHero.appearance.weight[1]}}</p>
+        <p *ngIf="!env.production">powerstat : {{ myjson.stringify(myHero.powerstats,null,4)}}</p>
+    </mat-card-content>
+
+    <mat-card-actions>
+        <button mat-raised-button color="accent" (click)="talkBack(myHero.name)">{{myHero.name}}</button>
+    </mat-card-actions>
+</mat-card>
