--- a/superMangular/src/app/component/superherolist/superherolist.component.html
+++ b/superMangular/src/app/component/superherolist/superherolist.component.html
@@ -1,4 +1,7 @@
 <div class="heros-container">
+    <div id="regle" *ngIf="firstLaunch">
+        <p id="regle_texte">A chaque tour un question t'es posée, il te faut juste choisir le super heros qui correspond le mieux !</p>
+    </div>
     <p id="score">{{score}} points </p>
 
     <mat-spinner diameter="200" color="accent" mode="indeterminate" [hidden]="hideMe"></mat-spinner>
