--- a/superMangular/src/app/component/search-page/search-page.component.css
+++ b/superMangular/src/app/component/search-page/search-page.component.css
@@ -26,3 +26,12 @@ form {
   justify-content: center;
 }
 
+p {
+  display: flex;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.842);
+  border-radius: 25px;
+  border: 2px solid #73AD21;
+  color: #73AD21;
+}
+
