--- a/superMangular/src/app/component/search-page/search-page.component.html
+++ b/superMangular/src/app/component/search-page/search-page.component.html
@@ -7,14 +7,12 @@
       </mat-form-field>
   </form>
 
+  <p [hidden]= "hideMe">{{Result}}</p>
+
     <ng-container *ngIf="HeroesSearched && HeroesSearched.results.length > 0">
-        <div *ngFor="let Hero of HeroesSearched.results">
+        <div [hidden]= "hideExHeroes" *ngFor="let Hero of HeroesSearched.results">
             <app-superhero [myHero]="Hero" [showButton]="false" class="suphero"></app-superhero>
         </div>
-    </ng-container>
-
-    <ng-container *ngIf="HeroesSearched && HeroesSearched.results.length <= 0">
-        Pas d'élément !
     </ng-container>
 
 </div>
