--- a/superMangular/src/app/component/search-page/search-page.component.html
+++ b/superMangular/src/app/component/search-page/search-page.component.html
@@ -2,7 +2,7 @@
 
   <form [formGroup]="searchForm">
       <mat-form-field class="box">
-          <mat-label class="label">Entrer le texte à rechercher:</mat-label>
+          <mat-label class="label">Cherchez vos super-héros :</mat-label>
           <input matInput formControlName="search" class="input">
       </mat-form-field>
   </form>
