--- a/superMangular/src/app/component/superhero/superhero.component.html
+++ b/superMangular/src/app/component/superhero/superhero.component.html
@@ -11,6 +11,6 @@
     </mat-card-content>
 
     <mat-card-actions *ngIf="showButton">
-        <button mat-raised-button color="accent" (click)="talkBack()">{{myHero.name}}</button>
+        <button mat-raised-button (click)="talkBack()">{{myHero.name}}</button>
     </mat-card-actions>
 </mat-card>
