--- a/superMangular/src/app/component/superherolist/superherolist.component.html
+++ b/superMangular/src/app/component/superherolist/superherolist.component.html
@@ -1,6 +1,6 @@
 <div class="heros-container">
     <div id="regle" *ngIf="firstLaunch">
-        <p id="regle_texte">A chaque tour un question t'es posée, il te faut juste choisir le super heros qui correspond le mieux !</p>
+        <p id="regle_texte">À chaque tour un question t'es posée, il te faut juste choisir le super heros qui correspond le mieux !</p>
     </div>
     <p id="score">{{score}} points </p>
 
