--- a/src/app/component/superherolist/superherolist.component.html
+++ b/src/app/component/superherolist/superherolist.component.html
@@ -1,6 +1,6 @@
 <div class="heros-container">
     <div id="regle" *ngIf="firstLaunch">
-        <p id="regle_texte">À chaque tour un question t'es posée, il te faut juste choisir le super héros qui correspond le mieux !</p>
+        <p id="regle_texte">À chaque tour une question t'es posée, il te faut juste choisir le super héros qui correspond le mieux !</p>
     </div>
 
 
